# computer-use-engine

./: .gitignore  README.ko.md  README.md  pyproject.toml
config/: default.yaml
cue/: __init__.py  __main__.py  server.py
cue/adapters/: __init__.py  base.py
cue/core/: __init__.py  approval.py  models.py  policy.py  risk.py  session.py
cue/monitor/: __init__.py  events.py
cue/safety/: __init__.py  guardrails.py  logger.py  pipeline.py
cue/tools/: __init__.py  approval.py  keyboard.py  monitor.py  mouse.py  screenshot.py  window.py
cue/utils/: __init__.py  keymap.py  screen.py
scripts/: register.py
tests/: conftest.py  test_approval.py  test_approval_tools.py  test_events.py  test_guardrails.py  test_keyboard.py  test_models.py  test_monitor_tools.py  test_mouse.py  test_pipeline.py  test_policy.py  test_risk.py  test_screenshot.py  test_session.py  test_session_events.py  test_window.py
